--- a/app/assets/stylesheets/url.css
+++ b/app/assets/stylesheets/url.css
@@ -14,6 +14,7 @@ h1 {
 
 a {
 	font-size: 4vw;
+	padding-right: 20%;
 }
 
 img {
@@ -90,7 +91,6 @@ img {
 }
 
 .errors {
-	text-align: center;
   color: red;
 }
 
